--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -27,7 +27,6 @@
 .st_warp .st_middle .deals_card{width:18%;}
 .st_warp .st_middle .st_middle_box{margin-bottom:30px;}
 
-
 /* For Store Station Page["/deals/stores"] / Side Tab Menu */
 .tab-menu-test{width:100%;margin:auto;}
 .tab-menu-wp{padding:20px 10px 7px 10px;border-radius:4px;overflow:hidden;width:100%;border:1px solid #ccc;}
@@ -45,6 +44,16 @@
 .tab-menu-text-alt span{}
 .tab-menu-text-alt span em{text-decoration:line-through;color:#616161;margin-right:1px;font-size:13px;}
 .all-show{float:right;padding:30px 10px 0px 0;cursor:pointer;color:#3498db;font-size:15px;text-transform:uppercase}
+
+@media screen and (max-width:640px){
+  .st_warp .st_left, .st_warp .st_right, .st_warp .st_top_warp .st_top{float:none;width:100%;margin:0;}
+  .st_warp .st_top_warp .st_top_side{float:none;width:100%;margin:0;}
+  .st_warp .st_middle .deals_card{width:48%;}
+}
+
+@media screen and (min-width:641px) and (max-width:1199px){
+  .st_warp .st_middle .deals_card{width:31.3333%;}
+}
 
 
 /* Store Promotions Main Page ["/storepromotions"]*/
@@ -67,7 +76,7 @@
 .sp_wrap .sp_right .sp_card{border-bottom:1px solid #ccc;padding:20px 0;}
 .sp_wrap .sp_right .sp_card .admin{font-size:12px;}
 .sp_wrap .sp_right .sp_image{float:left;width:15%;height:104.39px;position:relative;}
-.sp_wrap .sp_right .sp_image img{width:100%;height:70px;object-fit:cover;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
+.sp_wrap .sp_right .sp_image img{width:100%;height:70px;object-fit:contain;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
 .sp_wrap .sp_right .inner{float:left;width:59%;margin:0 3%;}
 .sp_wrap .sp_right .inner .sp_title{margin:5px 0;font-weight:500;line-height:1.2;font-size:18px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2}
 .sp_wrap .sp_right .inner .sp_title a{color:#000;}
@@ -81,7 +90,6 @@
 .sp_wrap .sp_right .sp_btn_m{display:none;}
 .sp_wrap .sp_right .sp_btn{float:left;width:20%;position:relative;height:104.39px;}
 .sp_wrap .sp_right .sp_btn a{text-decoration:none;background:#000;color:#fff;padding:20px;border-radius:10px;display:block;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);width:100%;}
-
 
 @media screen and (max-width:640px){
   .sp_wrap .sp_left{display:none;}
@@ -99,6 +107,28 @@
   .sp_wrap .sp_right .sp_btn_m{display:block;text-align:center;padding:3px 0;background:#000;}
   .sp_wrap .sp_right .sp_btn_m a{color:#fff;}
 }
+
+
+/******************************************************************************************************/
+/* Store Deals Main page "/storedeals" */
+.store_nav{}
+.store_nav ul{}
+.store_nav ul li{float:left;margin-right:20px;}
+.store_nav ul li a{color:#000;}
+.sub_nav .sub_nav_pc>ul>li.sd_all>a.active{background:#fff;border-bottom:none;}
+.sd_category div p span{background:#ffff00;padding:0 7px;}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
