--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -2,7 +2,13 @@
 <div class="layout"><!--layout-->
   <div class="wrap">  
     <%= render 'shared/header_short' %>
-    <div class="dealpage_title"><p>Sales & Promotions</p></div>
+    <div class="sd_category">
+      <% if params[:spcategory].present? %>
+        <div class="dealpage_title"><p>Promotions Of <span><%= params[:spcategory] %></span></p></div>
+      <% else %>
+        <div class="dealpage_title"><p>Sales & Promotions</p></div>    
+      <% end %>
+    </div>
 
     <div class="sp_wrap">
 
