--- a/app/views/spcategories/_form.html.erb
+++ b/app/views/spcategories/_form.html.erb
@@ -8,7 +8,7 @@
       <div class="pricing clearfix">
         <%= f.input :name %>
         <%= f.input :spc_category_num %>
-        <!-- <%= f.input :display_in_navbar %> -->
+        <%= f.input :display_in_navbar %>
       </div>
     </div>
 
