--- a/app/views/storedeals/index.html.erb
+++ b/app/views/storedeals/index.html.erb
@@ -3,9 +3,9 @@
     <%= render 'shared/header_short' %>
     <div class="sd_category">
       <% if params[:sdcategory].present? %>
-        <div class="dealpage_title"><p>Deals Of <span><%= params[:sdcategory] %></span></p></div>
+        <div class="dealpage_title"><p>Bargain Of <span><%= params[:sdcategory] %></span></p></div>
       <% else %>
-        <div class="dealpage_title"><p>Deals By Stores</p></div>    
+        <div class="dealpage_title"><p>Bargain By Stores</p></div>    
       <% end %>
     </div>
 
