--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -14,7 +14,8 @@
           <% if can? :update, @storepromotion %>
             <div class="admin">
               <%= link_to 'Edit', edit_storepromotion_path(@storepromotion) %> |
-              <%= link_to 'Back', storepromotions_path %>
+              <%= link_to 'Back', storepromotions_path %> |
+              <%= @storepromotion.impressionist_count %> views
             </div>
           <% end %>
         </div>
