--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -89,27 +89,27 @@
 .more_search{margin-top:15px;}
 .more_search input{width:35%;height:40px;padding:0 10px;}
 
-.deals_card{float:left;font-family:'Raleway', Arial, sans-serif;position:relative;overflow:hidden;margin:1%;width:23%;background:#fff;text-align:left;color:#000000;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);font-size:16px;-webkit-transform:translateZ(0);transform:translateZ(0);-webkit-perspective:20em;perspective:20em;}
+.deals_card{float:left;font-family:'Raleway', Arial, sans-serif;position:relative;overflow:hidden;margin:1%;width:18%;background:#fff;text-align:left;color:#000000;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);font-size:16px;-webkit-transform:translateZ(0);transform:translateZ(0);-webkit-perspective:20em;perspective:20em;}
 .deals_card *{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out;}
-.deals_card .image_box{width:100%;height:250px;padding:15px 15px 5px 15px;position:relative;}
+.deals_card .image_box{width:100%;height:200px;padding:15px 15px 5px 15px;position:relative;}
 .deals_card .image_box .mark{position:absolute;top:0;left:0;background:#000;color:#fff;width:50px;padding:7px;line-height:1.1;font-size:13px;text-align:center;}
 .deals_card .image_box .mark span{letter-spacing:3.1px;}
 .deals_card .image_box .mark em{display:block;letter-spacing:3.1px;}
 .deals_card .image_box .mark_expried{width:70px;height:42px;background:#ff0000;}
-.deals_card .image_box .mark_expried p{margin-top:6px;}
+.deals_card .image_box .mark_expried p{margin-top:6px;font-size:11px;}
 .deals_card .image_box .expried{-webkit-filter: grayscale(100%);filter: gray;}
 .deals_card img{width:100%;height:100%;position:relative;object-fit:contain;}
 .deals_card .buy-now{z-index:100;position:absolute;top:0;right:0;padding:0px 15px;color:#fff;font-weight:700;font-size:20px;opacity:0;background-color:#000;-webkit-transform:rotateX(-90deg);transform:rotateX(-90deg);-webkit-transform-origin:100% 0;-ms-transform-origin:100% 0;transform-origin:100% 0;}
 .deals_card .buy-now span{}
 .deals_card .buy-now span a{text-decoration:none;color:#fff;}
 .deals_card .buy_now{z-index:20;}
-.deals_card figcaption{padding:20px;}
+.deals_card figcaption{padding:0 20px;}
 .deals_card h3, .deals_card p{margin:0;}
-.deals_card h3{font-size:20px;font-weight:700;margin-bottom:10px;z-index:101;}
+.deals_card h3{font-size:17px;font-weight:700;margin-bottom:5px;z-index:101;}
 .deals_card h3 a{text-decoration:none;color:#000;}
-.deals_card p{font-size:0.9em;letter-spacing:1px;font-weight:400;line-height:1.4;height:4.2em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:3}
+.deals_card p{font-size:13px;letter-spacing:1px;font-weight:400;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:2}
 .deals_card p a{text-decoration:none;color:#000;word-break:break-word;}
-.deals_card .price{font-weight:500;font-size:1.5em;line-height:48px;letter-spacing:1px;}
+.deals_card .price{font-weight:500;font-size:17px;line-height:30px;letter-spacing:1px;}
 .deals_card .price em{margin-right:5px;opacity:0.5;font-size:0.9em;text-decoration:line-through;}
 .deals_card a.btn{position:absolute;top:0;bottom:0;left:0;right:0;}
 .deals_card .m_btn{display:none;background:#000;padding:5px;text-align:center;}
