--- a/app/views/hotdeals/_hotdeals.js.erb
+++ b/app/views/hotdeals/_hotdeals.js.erb
@@ -5,4 +5,10 @@ $(".hover").mouseleave(
   }
 );
 
+//Show orLess More 
+$('.show-btn').click(function() {
+  $('.trix-container').toggleClass("show");
+  $(this).toggleClass("rotate");
+});
+
 
