--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -31,7 +31,7 @@
             <% end %> -->
           </div>
         </div>
-        <div class="show-more">(Show More)</div>
+        <div class="show-more">Show More</div>
       </div>
       <%= render 'storepromotions/navbar' %>
 
