--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -6,7 +6,6 @@
 .hotdeals_new{display:inline-block;margin-left:20px;padding:0 10px;background:#000}
 .hotdeals_new a{text-decoration:none;color:#fff;}
 
-
 /* Show Page */
 .show_wrap .show_box .show_inner a.p_btn{width:300px;text-align:center;}
 .show_wrap .show_box .show_inner .hotdeal_inner{}
@@ -39,6 +38,13 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .btn a em{font-weight:bold;font-size:15px;}
 .show_wrap .show_box .show_inner .hotdeal_inner p.sp_des{margin:0;}
 .show_wrap .show_box .hotdeal_img{position:relative;}
+.trix-container{max-height:300px;overflow:hidden;transition:max-height .5s ease;position:relative;}
+.trix-container.show{max-height:2000px;}
+.gradient::before{content:'';height:120px;position:absolute;bottom:0px;left:0;width:100%;background:linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);transition:height .25s ease;}
+.show.gradient::before{ height:50px;}
+.show-btn{box-shadow:0 2px 5px rgba(0,0,0,.6);background-color:#000;border:none;border-radius:100%;bottom:20px;color:#fff;cursor:pointer;height:30px;width:30px;left:50%;margin-left:-20px;position:absolute;transition:background-color .25s ease;font-size:20px;}
+/*.show-btn:hover{background-color:#7a9c0f;}*/
+.show-btn.fa.rotate {transform:rotate(180deg); }
 
 .show_wrap .show_box .show_img .mark{width:50px;background:#000;font-size:13px;padding:7px;border-radius:10px;line-height:1.1;position:absolute;top:0;left:0;}
 .show_wrap .show_box .show_img .mark span{text-align:center;color:#fff;letter-spacing:3.1px;display:block;}
@@ -153,10 +159,11 @@
 @media screen and (min-width:641px) and (max-width:1199px){
   .more_search{margin:-10px 0 10px 0;}
   .more_search input{width:100%;border:1px solid #ccc;}
-  .deals_card{width:48%;}
+  .deals_card{width:31.33%;}
   .dealpage_title p{font-size:55px;}
   .deals_card .buy-now{display:block;}
   .deals_card .m_btn{display:block;}
+  .deal_stores figcaption{padding:0px 20px 10px 20px;}
 }
 
 .intheshow{width:300px;margin-top:-10px;}
@@ -176,3 +183,8 @@
   .text_copied_m{display:block;width:100%;}
   [data-copy-text] + i.material-icons{padding:12px;}
 }
+@media screen and (min-width:641px) and (max-width:1199px){
+  [data-copy-text] + i.material-icons{padding:12px;} 
+}
+ 
+
