--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -14,7 +14,8 @@
 .st_warp .st_box .inner p .st_title{background:yellow;}
 .st_warp .st_box .inner p a{background:#000;padding:0 5px;color:#fff;}
 .st_warp .st_box .inner em{}
-.st_warp .st_box .inner span{line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2;font-size:13px;}
+.st_warp .st_box .inner span, .tab-menu-text-alt p, .deal_text p
+{line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2;font-size:13px;}
 .st_warp .st_box .inner span a{color:#616161;}
 .st_warp .st_box .inner span.no_code{font-size:12px;color:#616161;}
 .st_warp .st_box .inner .store_sti{}
@@ -36,25 +37,29 @@
 .clear{clear:both}
 .tab-menu-wp ul li{cursor:pointer;width:50%;text-align:center;display:block;color:#000;float:left;font-size:13px;padding-bottom:10px;}
 .store_active{border-bottom:3px solid #3498db;color:#08f;}
-.tab-menu-text{width:100%;margin-top:10px;cursor:pointer;padding:3px 5px;transition:400ms all;}
+.tab-menu-text{width:100%;height:71px;margin-top:10px;cursor:pointer;padding:3px 5px;transition:400ms all;border-bottom:1px solid #ccc;}
 /*.tab-menu-text:hover{background:rgba(0,0,0,.4);}*/
-.tab-menu-img img{width:50px;height:50px;overflow:hidden;float:left;/*border-radius:100%;*/}
-.tab-menu-text-title{color:#000;white-space: nowrap;text-overflow:ellipsis;overflow:hidden;padding-right:15px;font-size:15px;position:relative;left:10px;top:0;}
-.tab-menu-text-alt{color:#000;font-size:15px;position:relative;left:10px;top:5px;margin-bottom:10px;}
-.tab-menu-text-alt span{}
+.tab-menu-img img{width:50px;height:50px;overflow:hidden;float:left;/*border-radius:100%;*/object-fit:contain;}
+.tab-menu-text-title{color:#000;white-space: nowrap;text-overflow:ellipsis;overflow:hidden;padding-right:15px;font-size:13px;position:relative;left:10px;top:0;}
+.tab-menu-text-alt{color:#000;font-size:13px;position:relative;left:10px;top:0;margin-bottom:10px;}
+.tab-menu-text-alt p a{display:block;color:#616161;}
+.tab-menu-text-alt span{font-size:17px;margin-top:-10px;display:block;}
 .tab-menu-text-alt span em{text-decoration:line-through;color:#616161;margin-right:1px;font-size:13px;}
-.all-show{float:right;padding:30px 10px 0px 0;cursor:pointer;color:#3498db;font-size:15px;text-transform:uppercase}
+.all-show a{float:right;padding:13px 10px 0px 0;cursor:pointer;color:#3498db;font-size:15px;text-transform:uppercase}
 
 @media screen and (max-width:640px){
-  .st_warp .st_left, .st_warp .st_right, .st_warp .st_top_warp .st_top{float:none;width:100%;margin:0;}
+  .st_warp .st_left, .st_warp .st_right, .st_warp .st_top_warp .st_top{float:none;width:100%;margin:0 0 10px 0;}
   .st_warp .st_top_warp .st_top_side{float:none;width:100%;margin:0;}
   .st_warp .st_middle .deals_card{width:48%;}
+  .st_warp .st_box .inner .store_sti .container .wrap .box{width:75%;margin-left:12%;}
 }
 
 @media screen and (min-width:641px) and (max-width:1199px){
+  .st_warp .st_top_warp .st_top{width:100%;margin:0;}
   .st_warp .st_middle .deals_card{width:31.3333%;}
+  .st_warp .st_top_warp .st_top_side{display:none;}
+  .st_warp .st_box .inner .store_sti .container .wrap .box{width:78%;margin-left:12%;}
 }
-
 
 /* Store Promotions Main Page ["/storepromotions"]*/
 .sp_wrap{margin-top:35px;font-family: 'Montserrat', sans-serif;}
@@ -66,7 +71,8 @@
 .sp_wrap .sp_left .sp_menu ul li{margin-bottom:5px;background:#08f;padding:5px 15px;border-radius:15px;}
 .sp_wrap .sp_left .sp_menu ul li.admin{background:#000;}
 .sp_wrap .sp_left .sp_menu ul li a{color:#fff;font-size:15px;display:block;}
-.sp_wrap .sp_left .sp_menu .show-more-height{height:365px;overflow:hidden;}
+.sp_wrap .sp_left .sp_menu .show-more-height{height:300px;overflow:hidden;}
+.sp_wrap .sp_left .show-more{text-align:center;background:#000;color:#fff;padding:5px 10px;border-radius:15px;}
 /* Mobile Menu */
 .featured .sp_m{width:100%;}
 .featured .sm_mobile ul.sp_ul{padding:20px;font-family:'Anton', sans-serif;overflow:scroll;height:80%;}
@@ -92,6 +98,7 @@
 .sp_wrap .sp_right .sp_btn a{text-decoration:none;background:#000;color:#fff;padding:20px;border-radius:10px;display:block;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);width:100%;}
 
 @media screen and (max-width:640px){
+  .sp_wrap{margin:0;}
   .sp_wrap .sp_left{display:none;}
   .sp_wrap .sp_right{float:none;width:100%;}
   .sp_wrap .sp_right .sp_card{float:left;width:48%;margin:1%;box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);padding: 5px 10px 10px 10px;}
@@ -106,6 +113,12 @@
   .sp_wrap .sp_right .sp_btn{display:none;}
   .sp_wrap .sp_right .sp_btn_m{display:block;text-align:center;padding:3px 0;background:#000;}
   .sp_wrap .sp_right .sp_btn_m a{color:#fff;}
+}
+@media screen and (min-width:641px) and (max-width:1199px){
+  .sp_wrap{margin:0;}
+  .sp_wrap .sp_left .sp_menu ul li a{font-size:12px;}
+  .sp_wrap .sp_right .inner .sp_title{font-size:15px;}
+  .sp_wrap .sp_right .sp_btn a{padding:10px;font-size:11px;text-align:center;}
 }
 
 
