--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -18,6 +18,13 @@
       <%= f.input :h_spare_41, label: 'Original Price' %>
       <%= f.input :h_spare_42, label: 'Current Price' %>
       <%= f.input :h_percentage, label: 'Discount Percentage' %>
+    </div>
+    <p>(when we don't know sales of percentage)</p>
+    <div class="pricing clearfix">
+      <%= f.input :h_spare_43, label: 'Original Price' %>
+      <%= f.input :h_spare_44, label: 'Current Price' %>
+    </div>
+    <div class="pricing clearfix">
       <%= f.input :h_spare_08, label: 'Average Rate' %>
       <%= f.input :h_spare_09, label: 'Number of Reviews' %>
       <%= f.input :h_spare_02, label: 'Coupon Deals?' %>
