--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -26,8 +26,14 @@
               <%= render 'hotdeals/body_sns' %><br>
               <%= @hotdeal.impressionist_count(:filter=>:all) %> Views |
               <%= @hotdeal.created_at.strftime("%d. %B.") %><br />
-              
-              <p class="h_price"><%= number_to_currency(@hotdeal.h_spare_42) %> <span class="span_01">( Was: <%= number_to_currency(@hotdeal.h_spare_41) %></span><span class="span_02"> | <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
+              <%= @hotdeal.h_title %><br/>
+              <% if @hotdeal.h_spare_42.present? %>
+                <p class="h_price"><%= number_to_currency(@hotdeal.h_spare_42) %> <span class="span_01">( Was: <%= number_to_currency(@hotdeal.h_spare_41) %></span><span class="span_02"> | <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
+              <% else %>
+                <% running_total = 0 %>
+                <% running_total =  (@hotdeal.h_spare_43 - @hotdeal.h_spare_44) / @hotdeal.h_spare_43 * 100 %>
+                <p class="h_price"><%= number_to_currency(@hotdeal.h_spare_43) %> <span class="span_01">( Was: <%= number_to_currency(@hotdeal.h_spare_44) %></span><span class="span_02"> | <%= number_to_percentage(running_total, precision: 0) %> OFF )</span></p>
+              <% end %>
             </div>
           <% end %>
         </div>
@@ -38,7 +44,13 @@
            <% if @hotdeal.h_price.present? %>
             <p class="h_price"><%= number_to_currency(@hotdeal.h_price) %> <span class="span_01"><%= number_to_currency(@hotdeal.h_list_price) %></span><span class="span_02">( <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
            <% else %>
-            <p class="h_price"><%= number_to_currency(@hotdeal.h_spare_42) %> <span class="span_01"><%= number_to_currency(@hotdeal.h_spare_41) %></span><span class="span_02">( <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
+            <% if @hotdeal.h_spare_42.present? %>
+              <p class="h_price"><%= number_to_currency(@hotdeal.h_spare_42) %> <span class="span_01"><%= number_to_currency(@hotdeal.h_spare_41) %></span><span class="span_02">( <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
+            <% else %>
+              <% running_total = 0 %>
+              <% running_total =  (@hotdeal.h_spare_43 - @hotdeal.h_spare_44) / @hotdeal.h_spare_43 * 100 %>
+              <p class="h_price"><%= number_to_currency(@hotdeal.h_spare_44) %> <span class="span_01"><%= number_to_currency(@hotdeal.h_spare_43) %></span><span class="span_02">( <%= number_to_percentage(running_total, precision: 0) %> OFF )</span></p>
+            <% end %>
            <% end %>
            
            <!-- <p class="top_line">Amazon is offering "<span><%= @hotdeal.h_title %></span>" for only <em><%= number_to_currency(@hotdeal.h_price) %></em></p> -->
@@ -58,11 +70,18 @@
              </span> 
             <% end %>
              <em>* Pricing may change and deals can expire fast.</em>
+
              <% if @hotdeal.h_spare_41.present? %>
               <% running_total = 0 %>
               <% running_total =  @hotdeal.h_spare_41.to_i - @hotdeal.h_spare_42.to_i %>
               <em class="save_money">* Save <%= number_to_currency(running_total) %> or more.</em>
+             <% else %>
+              <% running_total = 0 %>
+              <% running_total =  @hotdeal.h_spare_43.to_i - @hotdeal.h_spare_44.to_i %>
+              <em class="save_money">* Save <%= number_to_currency(running_total) %> or more.</em>
              <% end %>
+
+
              <em>+ FREE Shipping ( Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items. )</a></em>
              <% if @hotdeal.h_spare_10.present? %>
               <% @hotdeal.h_spare_10 %>
@@ -76,7 +95,7 @@
             <a class="m_btn" target="_blank" href="<%= @hotdeal.h_link %>">Check it out on&ensp;<em>Amazon</em></a>
 
             <%if @hotdeal.h_spare_21.present? %>
-              <div class="trix"><span>Features</span><p><%= @hotdeal.h_spare_21.html_safe %></p></div>
+              <div class="trix trix-container gradient"><span>Features</span><p><%= @hotdeal.h_spare_21.html_safe %></p><button class="show-btn fa fa-chevron-down"></button></div>
             <% else %>
               <% if @hotdeal.h_description.present? %>
                 <div class="show_des"><p class="description"><%= @hotdeal.h_description %></p></div>
@@ -114,8 +133,8 @@
       </div>
 
     </div>
-    
   </div>
 </div>
+<script><%= render(:partial => 'hotdeals', :handlers => [:erb], :formats => [:js]) %></script>
 
 
