--- a/app/views/storepromotions/_storepromotions.js.erb
+++ b/app/views/storepromotions/_storepromotions.js.erb
@@ -27,9 +27,9 @@
   //Show more / Less more menu
   $(".show-more").click(function () {
     if($(".text").hasClass("show-more-height")) {
-        $(this).text("(Show Less)");
+        $(this).text("Show Less");
     } else {
-        $(this).text("(Show More)");
+        $(this).text("Show More");
     }
     $(".text").toggleClass("show-more-height");
   });
