--- a/app/views/hotdeals/_hotdeal.html.erb
+++ b/app/views/hotdeals/_hotdeal.html.erb
@@ -16,7 +16,11 @@
       <% if hotdeal.h_list_price.present? %>
         <em>$<%= hotdeal.h_list_price %></em>$<%= hotdeal.h_price %>
       <% else %>
-        <em><%= number_to_currency(hotdeal.h_spare_41) %></em><%= number_to_currency(hotdeal.h_spare_42) %>
+        <% if hotdeal.h_spare_41.present? %>
+         <em><%= number_to_currency(hotdeal.h_spare_41) %></em><%= number_to_currency(hotdeal.h_spare_42) %>
+        <% else %>
+          <em><%= number_to_currency(hotdeal.h_spare_43) %></em><%= number_to_currency(hotdeal.h_spare_44) %>
+        <% end %>
       <% end %>
     </div>
     <div class="m_btn"><a href="<%= hotdeal.h_link %>">Buy Now</a></div>
