--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -1,12 +1,11 @@
 /* For Store Station Page["/deals/stores"] */
 .st_warp{}
-.st_warp .st_top_warp .st_top{float:left;width:68%;margin:1%;}
+.st_warp .st_top_warp .st_top{float:left;width:68%;margin:1%;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);padding:10px;}
 .st_warp .st_top_warp .st_top .more_btn a{float:right;color:#3498db;}
 .st_warp .st_top_warp .st_top_side{float:left;width:28%;margin:1%;}
-.st_warp .st_left, .st_warp .st_right{float:left;width:50%;padding:10px;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);}
-/*.st_warp .st_left{border-right:1px solid #ccc;}
-.st_warp .st_right{border-left:1px solid #ccc;}*/
-.st_warp .st_box{border-bottom:1px solid #ccc;padding-top:1%;}
+.st_warp .st_left, .st_warp .st_right{float:left;width:50%;padding:10px;}
+
+.st_warp .st_box{border-bottom:1px solid #ccc;float:left;width:49%;margin:0% 0.5% 1% 0.5%;}
 .st_warp .st_box .st_image{float:left;width:18%;margin:1%;}
 .st_warp .st_box .st_image img{width:100%;height:70px;vertical-align:middle;object-fit:contain;}
 .st_warp .st_box .inner{float:left;width:77%;margin-left:3%;padding:7px 7px 0 0;height:90px;}
@@ -37,7 +36,7 @@
 .clear{clear:both}
 .tab-menu-wp ul li{cursor:pointer;width:50%;text-align:center;display:block;color:#000;float:left;font-size:13px;padding-bottom:10px;}
 .store_active{border-bottom:3px solid #3498db;color:#08f;}
-.tab-menu-text{width:100%;height:71px;margin-top:10px;cursor:pointer;padding:3px 5px;transition:400ms all;border-bottom:1px solid #ccc;}
+.tab-menu-text{width:100%;height:71px;margin-top:15px;cursor:pointer;padding:3px 5px;transition:400ms all;border-bottom:1px solid #ccc;}
 /*.tab-menu-text:hover{background:rgba(0,0,0,.4);}*/
 .tab-menu-img img{width:50px;height:50px;overflow:hidden;float:left;/*border-radius:100%;*/object-fit:contain;}
 .tab-menu-text-title{color:#000;white-space: nowrap;text-overflow:ellipsis;overflow:hidden;padding-right:15px;font-size:13px;position:relative;left:10px;top:0;}
@@ -45,10 +44,11 @@
 .tab-menu-text-alt p a{display:block;color:#616161;}
 .tab-menu-text-alt span{font-size:17px;margin-top:-10px;display:block;}
 .tab-menu-text-alt span em{text-decoration:line-through;color:#616161;margin-right:1px;font-size:13px;}
-.all-show a{float:right;padding:13px 10px 0px 0;cursor:pointer;color:#3498db;font-size:15px;text-transform:uppercase}
+.all-show a{float:right;padding:10px 10px 0px 0;cursor:pointer;color:#3498db;font-size:15px;text-transform:uppercase}
 
 @media screen and (max-width:640px){
-  .st_warp .st_left, .st_warp .st_right, .st_warp .st_top_warp .st_top{float:none;width:100%;margin:0 0 10px 0;}
+  .st_warp .st_top_warp .st_top{float:none;width:100%;margin:0;}
+  .st_warp .st_box{float:none;width:100%;margin:0 0 10px 0;}
   .st_warp .st_top_warp .st_top_side{float:none;width:100%;margin:0;}
   .st_warp .st_middle .deals_card{width:48%;}
   .st_warp .st_box .inner .store_sti .container .wrap .box{width:75%;margin-left:12%;}
@@ -140,7 +140,11 @@
 
 
 
-
+.store_top{}
+.store_top .st_top_box{float:left;width:48%;margin:1%;border:1px solid;} 
+.store_top .st_top_box .image{float:left;width:30%;}
+.store_top .st_top_box .image img{width:100%;}
+.store_top .st_top_box .inner{float:left;width:63%;margin-right:3%;}
 
 
 
