--- a/app/views/hotdeals/_header.html.erb
+++ b/app/views/hotdeals/_header.html.erb
@@ -18,9 +18,9 @@
     <div class="gnb_m">
       <ul class="clearfix">
         <li><a href="/hotdeals">BEST BARGAIN,</a></li>
-        <li><a href="/deals/bestdeals">DAILY DEALS,</a></li>
+        <li><a href="/deals/bestdeals">- DAILY DEALS,</a></li>
         <li><a href="/promocodes">PROMO CODES,</a></li>
-        <li><a href="/deals/promo_codes">DAILY CODES,</a></li>
+        <li><a href="/deals/promo_codes">- DAILY CODES,</a></li>
         <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
