--- a/app/views/promocodes/_header.html.erb
+++ b/app/views/promocodes/_header.html.erb
@@ -4,7 +4,7 @@
     <div class="sub_nav_pc">
       <ul class="clearfix">
         <li><a href="/hotdeals">Best Bargain</a></li>
-        <li class="coumos1 more"><a href="/deals/bestdeals">[ Daily Deals ]</a></li>
+        <li class="coumos1 more"><a href="/deals/bestdeals"> - Daily Deals ]</a></li>
         <li><a href="/promocodes">Promo Codes</a></li>
         <li class="more"><a href="/deals/promo_codes">[ Daily Codes ]</a></li>
         <li><a href="/deals/most_reviewed">Most-Reviewed</a></li>
@@ -18,9 +18,9 @@
     <div class="gnb_m">
       <ul class="clearfix">
         <li><a href="/hotdeals">BEST BARGAIN,</a></li>
-        <li><a href="/deals/bestdeals">DAILY DEALS,</a></li>
+        <li><a href="/deals/bestdeals">- DAILY DEALS,</a></li>
         <li><a href="/promocodes">PROMO CODES,</a></li>
-        <li><a href="/deals/promo_codes">DAILY CODES,</a></li>
+        <li><a href="/deals/promo_codes">- DAILY CODES,</a></li>
         <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
