--- a/app/views/spcategories/index.html.erb
+++ b/app/views/spcategories/index.html.erb
@@ -29,6 +29,7 @@
         <% end %>
       </tbody>
     </table>
+    <a href="/storepromotions">Back To Store Promotions</a>
   
   </div>
 </div>
