--- a/app/views/deals/_body_stores.html.erb
+++ b/app/views/deals/_body_stores.html.erb
@@ -3,7 +3,7 @@
 
    <div class="st_top clearfix">
       
-      <h2>Promotions with Code</h2>
+      <h2>New Offers & Promotions</h2>
       <% @storepromotions.each do |promo| %>
         <div class="st_box clearfix">
           <div class="st_image"><a target="_blank" href="<%= promo.sp_link %>"><img src="<%= promo.sp_image %>" alt="<%= promo.sp_title %>" title="<%= promo.sp_store_name %>"></a></div>
