--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -46,24 +46,14 @@
   </div>
 
 
-  <!-- <div class="for_sns">
+ <!--  <div class="for_sns">
     <% @hotdeals.each do |hotdeal| %>
       <div class="wrapping">
        <div class="image"><img src="<%= hotdeal.h_image %>"></div>
        <div class="title"><p><%= hotdeal.h_title %></p></div>
        <div class="info">
-        <table>
-          <tr>
-            <td>$50.00</td>
-            <td>$100.00 | 50% OFF</td>
-            <td>N/A</td>
-          </tr>
-          <tr>
-            <td>직배송 | X</td>
-            <td>$200 이하 무관세</td>
-            <td>Griffin</td>
-          </tr>
-        </table>
+        <p>$145.99 <em>$200.00</em><span>(40% OFF)</span></p>
+        <p>$200이하 무관세 | 직배송 가능</p>
        </div>
       </div>
     <% end %>
