--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -674,11 +674,14 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .all_wrap .all_hotdeals span, .all_wrap .all_promocodes em{margin-top:20px;display:block;}
 
 .for_sns{width:500px;}
-.for_sns .wrapping{position:relative;}
+.for_sns .wrapping{position:relative;margin-bottom:30px;}
 .for_sns .wrapping .image{width:500px;height:500px;}
-.for_sns .wrapping .image img{width:100%;height:100%;}
-.for_sns .wrapping .title{position:absolute;top:0;left:0;background:rgba(255,255,255,0.8);padding:5px;}
-.for_sns .wrapping .info{}
+.for_sns .wrapping .image img{width:100%;height:100%;padding:30px;}
+.for_sns .wrapping .title{position:absolute;top:0;left:0;background:rgba(0,136,255,0.8);padding:5px;width:100%;color:#fff;padding:10px;}
+.for_sns .wrapping .info{position:absolute;bottom:0;left:0;background:rgba(0,136,255,0.8);padding:5px;width:100%;color:#fff;padding:5px 10px;}
+.for_sns .wrapping .info p{font-size:17px;}
+.for_sns .wrapping .info p em{text-decoration:line-through;font-size:15px;}
+.for_sns .wrapping .info p span{font-size:15px;}
 .for_sns .wrapping .info table{border-collapse: collapse;width:100%;}
 .for_sns .wrapping .info table, td, th{border: 1px solid #000;}
 
